Guice isn't playing well. Refactored to a manual graph construction