@@ -56,7 +56,8 @@ public class Initializer {
 
     public static UIToolBox getToolBox() {
         if (toolBox == null) {
-            Services services = getInjector().getInstance(Services.class);
+//            Services services = getInjector().getInstance(Services.class);
+            Services services = new ManualInjectorModule().buildServices();
             ResourceBundle bundle = ResourceBundle.getBundle("i18n",
                     Locale.getDefault());
 
@@ -128,21 +129,21 @@ public class Initializer {
         return createdPath;
     }
 
-    public static Injector getInjector() {
-        if (injector == null) {
-            String moduleName = getConfig().getString("app.injector.module.class");
-            try {
-                Class clazz = Class.forName(moduleName);
-                // TODO in java 9 use clazz.getDeclaredConstructor().newInstance()
-                // You'll have to find one where constructor.getParameterCount == 0
-                Module module = (Module) clazz.newInstance();
-                injector = Guice.createInjector(module);
-            } catch (Exception e) {
-                throw new RuntimeException("Failed to create dependency injector", e);
-            }
-        }
-        return injector;
-    }
+//    public static Injector getInjector() {
+//        if (injector == null) {
+//            String moduleName = getConfig().getString("app.injector.module.class");
+//            try {
+//                Class clazz = Class.forName(moduleName);
+//                // TODO in java 9 use clazz.getDeclaredConstructor().newInstance()
+//                // You'll have to find one where constructor.getParameterCount == 0
+//                Module module = (Module) clazz.newInstance();
+//                injector = Guice.createInjector(module);
+//            } catch (Exception e) {
+//                throw new RuntimeException("Failed to create dependency injector", e);
+//            }
+//        }
+//        return injector;
+//    }
 
 
 }
